--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "react-native-af-video-player",
+  "name": "react-native-video-player",
   "version": "0.2.1",
   "dependencies": {
-    "react-native-keep-awake": "^2.0.6",
-    "react-native-linear-gradient": "2.3.0",
-    "react-native-orientation": "^3.1.0",
-    "react-native-slider": "https://github.com/abbasfreestyle/react-native-slider.git",
-    "react-native-vector-icons": "^4.4.2",
-    "react-native-video": "^2.0.0"
+    "react-native-keep-awake": "^4.0.0",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-orientation": "^3.1.3",
+    "react-native-slider": "https://github.com/IntelliJAbhishek/react-native-slider#master",
+    "react-native-vector-icons": "^6.6.0",
+    "react-native-video": "^4.4.4"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
